// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductGuarantee Component renders correctly 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="productCard"
    >
      <div
        class="productCard__title"
      >
        <h2
          class="MuiTypography-root Typography-root-1 MuiTypography-h6"
          data-testid="typography"
        >
          Product
        </h2>
      </div>
      <div
        class="productCard__description"
      >
        <h6
          class="MuiTypography-root Typography-root-1 MuiTypography-subtitle2"
          data-testid="typography"
        >
          description
        </h6>
      </div>
      <div>
        <table
          class="MuiTable-root Table-root-9 Table-evenColor-11"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-21 ColorPair-pearl-23"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.family
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.brand
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                Product
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                family
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                brand
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductGuarantee Component renders correctly when pdf available 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="productCard"
    >
      <div
        class="productCard__title"
      >
        <h2
          class="MuiTypography-root Typography-root-47 MuiTypography-h6"
          data-testid="typography"
        >
          Product
        </h2>
      </div>
      <div
        class="productCard__description"
      >
        <h6
          class="MuiTypography-root Typography-root-47 MuiTypography-subtitle2"
          data-testid="typography"
        >
          description
        </h6>
      </div>
      <div>
        <table
          class="MuiTable-root Table-root-55 Table-evenColor-57"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-67 ColorPair-pearl-69"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.family
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.brand
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                Product
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                family
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                brand
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductGuarantee Component renders multiple guarantee 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="productCard"
    >
      <div
        class="productCard__title"
      >
        <h2
          class="MuiTypography-root Typography-root-93 MuiTypography-h6"
          data-testid="typography"
        >
          Product
        </h2>
      </div>
      <div
        class="productCard__description"
      >
        <h6
          class="MuiTypography-root Typography-root-93 MuiTypography-subtitle2"
          data-testid="typography"
        >
          description
        </h6>
      </div>
      <div>
        <table
          class="MuiTable-root Table-root-101 Table-evenColor-103"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-113 ColorPair-pearl-115"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.family
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.brand
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                Product
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                family
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                brand
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="productCard"
    >
      <div
        class="productCard__title"
      >
        <h2
          class="MuiTypography-root Typography-root-93 MuiTypography-h6"
          data-testid="typography"
        >
          Product
        </h2>
      </div>
      <div
        class="productCard__description"
      >
        <h6
          class="MuiTypography-root Typography-root-93 MuiTypography-subtitle2"
          data-testid="typography"
        >
          description
        </h6>
      </div>
      <div>
        <table
          class="MuiTable-root Table-root-101 Table-evenColor-103"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-113 ColorPair-pearl-115"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.family
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                productDetails.brand
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                Product
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                family
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                brand
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
